# claude-code-manager

./: .gitignore  ARCHITECTURE_TODOS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.github/workflows/: rust.yml
packaging/homebrew/: ccm.rb
src/: app.rs  config.rs  data.rs  fs.rs  main.rs  session_store.rs  title_service.rs  titles.rs  ui.rs
