[package]
name = "ccm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ccm"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", features = ["json"] }
dirs = "5"
anyhow = "1"
arboard = "3"
