[package]
name = "ccm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ccm"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.13", features = ["json"] }
dirs = "6"
anyhow = "1"
arboard = "3"
catppuccin = { version = "2.7.0", features = ["ratatui"] }
toml = "1.1.2"
